--- a/Ejerc4.html
+++ b/Ejerc4.html
@@ -11,7 +11,7 @@
 
         <h4>AÑO 2008</h4>
 
-        <table border="1px" width="50%" >
+        <table style="border-collapse: collapse;" border="1px" width="50%" >
             <tr>
                 
                 <th colspan="2">Exámenes</th>
@@ -51,15 +51,15 @@
 
         <h4 id="enunciado">Enunciado del examen</h4>
         <p>
-            Ejercicio 1: ........................................................................
+            Ejercicio 1: ..................................................................<br>
             .....................................................................................
         </p>
         <p>
-            Ejercicio 2: ........................................................................
+            Ejercicio 2: ..................................................................<br>
             .....................................................................................
         </p>
 
-        Para mas informacion dirigirse a <a href="contacto@xx.com">contacto@xx.com</a>
+        Para mas informacion dirigirse a <a href="mailto:contacto@xx.com">contacto@xx.com</a>
     </body>
 </html>
     
